# deploy-matbakhi

./: .env  .gitignore  Dockerfile  MatbakhiFeeding(1).txt  README.md  answers.txt  db.sqlite3  docker-compose.yml  manage.py  matba5iTest.py  pyproject.toml  requirements.txt
.chroma/index/: id_to_uuid_36c30735-6a07-40b8-bf5e-9f5cb18625b3.pkl  id_to_uuid_bcc6edd0-2597-4a97-9474-9bed6f23c2cc.pkl  id_to_uuid_da453b82-4762-476b-9611-4162b50b65dc.pkl  index_metadata_36c30735-6a07-40b8-bf5e-9f5cb18625b3.pkl  index_metadata_bcc6edd0-2597-4a97-9474-9bed6f23c2cc.pkl  index_metadata_da453b82-4762-476b-9611-4162b50b65dc.pkl  uuid_to_id_36c30735-6a07-40b8-bf5e-9f5cb18625b3.pkl  uuid_to_id_bcc6edd0-2597-4a97-9474-9bed6f23c2cc.pkl  uuid_to_id_da453b82-4762-476b-9611-4162b50b65dc.pkl
helper/: openai_api.py  twilio_api.py
matbakhi_bot/: asgi.py  settings.py  urls.py  wsgi.py
src/: app.py
twilio_app/: apps.py  openai_api.py  twilio_api.py  urls.py  views.py
